--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 </body>
 
 <script src="upgradev2.js"></script>
+<script src="upgradev3.js"></script>
 <script src="Free_Code_Camp.js"></script>
 </html>
